# Strategic-Board-Game-Against-AI

./: CMakeLists.txt  README.md  board.cpp  game.cpp
